# KRAY

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  doc.md
.coding/rules/: commit.mdc  reply.mdc
.trae/rules/: CLAUDE.local.md  git-commit-message.md
KRAY/: .gitignore  CMakeLists.txt  kray.cpp  kray.ui  main.cpp
KRAY/resources/styles/: kb_key.qss  kb_tab_widget.qss
KRAY/src/core/: CMakeLists.txt  kray.ui  test.cpp  test.hc  test_ui.h
KRAY/src/protocol/: hphpt.cpp  hphpt_cmd.cpp
KRAY/src/usb_ontroller/: USBController.h  USBControllerFactory.h  USBHelper.cpp  USBHelper.h  USBInterface.cpp  USBInterface.h  USBThread.cpp  (+1 more)
docs/modules/: 01_core.md  02_usb_manager.md  03_devices_ctrl.md  04_usb_controller.md  05_keyboards_ray.md  06_protocol.md  07_music_rhythm.md  08_console.md  09_elements.md  10_utils.md  11_resources.md  12_middlewares.md  README.md
examples/: AudioCore.h
examples/usb_controller_fun1/: CMakeLists.txt
examples/usb_controller_fun1/include/async/: AsyncTransfer.h
examples/usb_controller_fun1/include/core/: UsbContext.h  UsbDevice.h
examples/usb_controller_fun1/include/hid/: HidInterface.h
examples/usb_controller_fun1/src/hid/: HidInterface.cpp
examples/usb_controller_fun2/: CMakeLists.txt  main.cpp
examples/usb_controller_fun2/src/: CMakeLists.txt  usb_controller.cpp  usb_controller.hpp
examples/usb_controller_fun2/src/usb_core/: usb_context.cpp  usb_context.hpp  usb_device.cpp  usb_device.hpp  usb_device_manager.cpp  usb_device_manager.hpp
examples/usb_controller_fun2/src/usb_transfer/: async_transfer.cpp  async_transfer.hpp  hid_device.cpp  hid_device.hpp  usb_transfer.cpp  usb_transfer.hpp
examples/usb_controller_fun3/: CMakeLists.txt  USB_CONTROLLER_DOCUMENTATION.md  doc.md  main.cpp
examples/usb_controller_fun3/example/: CMakeLists.txt  common.h  test_auto_all.cpp  test_bulk.cpp  test_hid_io.cpp  test_hid_open.cpp  test_hotplug.cpp
examples/usb_controller_fun3/middlewares/libusb/: CMakeLists.txt
examples/usb_controller_fun3/src/: CMakeLists.txt  usb_controller.cpp  usb_controller.hpp
examples/usb_controller_fun3/src/usb_core/: usb_context.cpp  usb_context.hpp  usb_device.cpp  usb_device.hpp  usb_device_manager.cpp  usb_device_manager.hpp  usb_hotplug.cpp  usb_hotplug.hpp  usb_hotplug_base.cpp  usb_hotplug_base.hpp  usb_hotplug_linux.cpp  usb_hotplug_linux.hpp  usb_hotplug_win.hpp
examples/usb_controller_fun3/src/usb_io/: async_transfer.cpp  async_transfer.hpp  hid_device.hpp  sync_transfer.cpp
examples/usb_controller_fun3/src/usb_transfer/: async_transfer.cpp  async_transfer.hpp  hid_device.cpp  hid_device.hpp  usb_transfer.cpp  usb_transfer.hpp
examples/usb_controller_fun3/test/: CMakeLists.txt  usb_ctrl_capi.cpp  usb_ctrl_capi.h  usb_test_ui.py
resources/: CMakeLists.txt  resources.qrc
resources/styles/: group_box.qss  kb_key.qss
src/: CMakeLists.txt
src/audio/: CMakeLists.txt
src/audio/process/: AudioEnergy.cpp  AudioEnergy.h  AudioFft.cpp  AudioFft.h  AudioProcess.cpp  AudioProcess.h  AudioSpectrum.cpp  AudioSpectrum.h  AudioWaveform.cpp  AudioWaveform.h  CMakeLists.txt
src/console/: CMakeLists.txt  console.cpp  console.h  console_sink.h  console_widget.cpp  console_widget.h
src/core/: CMakeLists.txt  kray.cpp  kray.h  kray.ui  kray_msg.cpp  main.cpp  t1.cpp  t1.h  t1.ui  t2.cpp  t2.h  t2.ui  test.ui
src/elements/: CMakeLists.txt  MKeyboardKey.cpp  MKeyboardKey.h  MKeyboardPanel.cpp  MKeyboardPanel.h  MKeyboardRow.cpp  MKeyboardRow.h
src/middlewares/: CMakeLists.txt
src/middlewares/qcustomplot/: CMakeLists.txt
src/middlewares/qt-material-widgets/components/: CMakeLists.txt
src/protocol/: CMakeLists.txt  hphpt.h
src/ui/: CMakeLists.txt
src/ui/devices_ctrl/: CMakeLists.txt  gt64he_device.cpp  gt64he_device.hpp  usb_device_base.cpp  usb_device_info.cpp  usb_device_info.hpp
src/ui/elements/: CMakeLists.txt  MKeyboardKey.cpp  MKeyboardKey.h  MSystemTrayIcon.cpp  MSystemTrayIcon.h
src/ui/keyboards/: CMakeLists.txt  USBWidget.h  Ui_USBWidget.h
src/ui/keyboards/devices/: Ui_GT64HeWidget.h
src/ui/keyboards/ray/: GT64HeWidget.cpp  GT64HeWidget.h  GT64HeWidgetSlots.cpp  LedEffect.cpp  LedEffect.h  Ui_GT64HeWidget.h
src/ui/music_rhythm/: AudioCapture.cpp  AudioCapture.h  AudioCore.cpp  AudioCore.h  CMakeLists.txt  MusicRhythmWidget.cpp  MusicRhythmWidget.h
src/ui/usb_manager/: CMakeLists.txt  USBDeviceManagerWidget.cpp  USBDeviceManagerWidget.h  USBWidget.cpp  USBWidget.h  USBWidgetSlots.cpp  Ui_USBWidget.h
src/usb_controller/: CMakeLists.txt  USBController.cpp  USBController.h  USBHelper.cpp  USBHelper.h  USBInterface.cpp  USBInterface.h  USBMsg.cpp  USBThread.cpp  USBThread.h  USBTransferCallback.h
src/usb_controller/devices/: DebugController.cpp  GT64HeController.cpp  GT64HeController.h  gt64he_device.cpp  usb_device_base.cpp  usb_device_base.hpp  usb_device_info.cpp  usb_device_info.hpp
src/usb_controller/example/: CMakeLists.txt  test_async.cpp  test_device_enum.cpp
src/usb_controller/hotplug/: USBHotplug.cpp  USBHotplug.h  USBHotplugLinux.cpp  USBHotplugWindows.cpp
src/usb_controller/src/: CMakeLists.txt  usb_controller.cpp
src/usb_controller/src/usb_core/: usb_device.cpp  usb_hotplug_base.cpp  usb_hotplug_base.hpp  usb_hotplug_linux.cpp  usb_hotplug_linux.hpp  usb_hotplug_win.cpp  usb_hotplug_win.hpp
src/usb_controller/src/usb_io/: sync_transfer.hpp
src/usb_controller/test/: CMakeLists.txt  usb_test_ui.py
src/usb_controller/usb_core/: usb_context.hpp  usb_device_manager.cpp  usb_event_thread.cpp  usb_event_thread.hpp  usb_hotplug_linux.cpp  usb_hotplug_win.cpp
src/usb_controller/usb_io/: async_transfer.cpp  async_transfer.hpp  hid_device.cpp  sync_transfer.cpp
src/usb_ontroller/: USBController.cpp  USBControllerFactory.cpp  USBThread.h  USBTransferCallback.h
src/usb_server/: CMakeLists.txt  usb_handler.cpp  usb_handler.hpp  usb_protocol.cpp  usb_protocol.hpp  usb_server.cpp  usb_server.hpp
src/utils/: CMakeLists.txt
usb_controller/: BUILD.md  CMakeLists.txt  UsbTree_report_demo.txt  设计USB控制器软件.md
usb_controller/src/: main.cpp
(+50 files in other folders)
